Fix: Prevent too wide editor in simple view

--- a/Resources/Private/Editor/Repeatable/style.module.css
+++ b/Resources/Private/Editor/Repeatable/style.module.css
@@ -99,7 +99,16 @@
 
     & .group {
         flex: 1;
+        max-width: 283px;
     }
+}
+
+.simpleWrapperTwoButtons .group {
+    max-width: 199px;
+}
+
+.simpleWrapperOneButton .group {
+    max-width: 241px;
 }
 
 .simpleButtons {
